<resources>
    <string name="app_name">享付wifi</string>
    <string name="mobile_login">手机登陆</string>
    <string name="mobile_num">手机号</string>
    <string name="verification_code">验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="error_verificode_retry">验证码错误，请重新尝试</string>
    <string name="login">登陆</string>
    <string name="jump_login">跳过登陆 ></string>
    <string name="login_success">登陆成功</string>
    <string name="login_fail">登陆失败</string>
    <string name="please_login">请登陆</string>
    <string name="phonenum_is_null">手机号码为空</string>
    <string name="phonenum_less_eleven">手机号码不足11位</string>
    <string name="phonenum_more_eleven">手机号码多于11位</string>
    <string name="verificode_is_null">验证码为空</string>
    <string name="verificode_less_six">验证码不足6位</string>
    <string name="verificode_more_six">验证码多于6位</string>
    <string name="personal_center">个人中心</string>
    <string name="my_intergration">我的积分：</string>
    <string name="cost_history">消费历史</string>
    <string name="contact_us">联系我们</string>
    <string name="user_agreement">用户协议</string>
    <string name="version_info">版本信息 v</string>
    <string name="click_update">点击更新</string>
    <string name="already_lastver">已是最新版本</string>
    <string name="intergration_mail_building">积分商城在建中，敬请期待...</string>
    <string name="exit_login">退出登录</string>
    <string name="sign">签到</string>
    <string name="no_sign">未签到</string>
    <string name="signed">已签到</string>
    <string name="sign_success">签到成功</string>
    <string name="sign_fail">签到失败</string>
    <string name="sign_veryday_intergration">每天签到获得2个积分</string>
    <string name="connect_success">连接成功</string>
    <string name="connect_fail">密码错误，连接失败</string>
    <string name="select_network">选择网络</string>
    <string name="detecting_network">正在检测您的网速...</string>
    <string name="network_speed_measurement">网络测速</string>
    <string name="disconnect">断开</string>
    <string name="network_detail">网络详情</string>
    <string name="signal_intensity">信号强度</string>
    <string name="strong">强</string>
    <string name="middle">中</string>
    <string name="weak">弱</string>
    <string name="ip_address">IP地址</string>
    <string name="gateway">网关</string>
    <string name="default_address">0.0.0.0</string>
    <string name="wifi_password">WIFI密码</string>
    <string name="please_input_password">请务必输入正确的WiFi密码，确保正常获得收益</string>
    <string name="share_income">共享收益</string>
    <string name="share">共享</string>
    <string name="one_intergration_hour">1 积分/小时</string>
    <string name="two_intergration_hour">2 积分/小时</string>
    <string name="three_intergration_hour">3 积分/小时</string>
    <string name="four_intergration_hour">4 积分/小时</string>
    <string name="five_intergration_hour">5 积分/小时</string>
    <string name="network_speed_result">当前网速相当于%1$sM宽带</string>
    <string name="network_detect_speed_finished">测速完成</string>
    <string name="network_detect_speed_fail_notification">网络测速失败，请检查网络后再测速或尝试网络诊断</string>
    <string name="wifi_share_name_null">WIFI名字为空</string>
    <string name="wifi_share_location_fail">位置信息获取失败</string>
    <string name="wifi_share_select_income">请选择共享收益</string>
    <string name="wifi_share_info_null">WIFI信息获取失败</string>
    <string name="wifi_share_info_pass_null">请输入WIFI密码</string>
    <string name="wifi_share_info_success">分享成功</string>
    <string name="wifi_share_info_fail">分享失败</string>
    <string name="wifi_switch_close">WIFI开关处于关闭状态</string>
    <string name="wifi_switch_need_open">是否需要开启WIFI开关？</string>
    <string name="wifi_need_pay">该WIFI需要付费连接</string>
    <string name="wifi_need_pass">该WIFI需要密码连接</string>
    <string name="wifi_pay_integral">您确定消费%1$s个积分连接到该WIFI</string>
    <string name="wifi_has_connect_time">已连接%1$s分钟</string>
    <string name="dialog_confirm">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="immediate_experience">立即体验</string>
    <string name="apk_downloading">apk下载中，请稍后点击安装</string>
    <string name="do_not_exit">WIFI连接成功！请不要退出应用，应用退出可能导致WIFI连接断开，应用可在后台运行</string>
</resources>
